<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfMin"
        style="@style/DefaultInputTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_picker_top_edge_margin"
        android:layout_marginEnd="@dimen/time_picker_separator_margin"
        android:hint="@string/min_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMin"
            style="@style/TimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/etSec" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfSec"
        style="@style/DefaultInputTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/time_picker_separator_margin"
        android:hint="@string/sec_label"
        app:layout_constraintBottom_toBottomOf="@+id/tfMin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tfMin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSec"
            style="@style/TimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/TimePickerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow_500"
        android:paddingHorizontal="@dimen/time_picker_title_horizontal_padding"
        android:paddingVertical="@dimen/time_picker_title_vertical_padding"
        android:text="@string/time_picker_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvTimeSeparator"
        style="@style/TimePickerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_separator"
        app:layout_constraintBottom_toBottomOf="@id/tfMin"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/tfMin" />

    <TextView
        android:id="@+id/tvDialogPositive"
        style="@style/SmallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/time_picker_sections_margin"
        android:layout_marginEnd="@dimen/time_picker_side_edge_margin"
        android:layout_marginBottom="@dimen/time_picker_bottom_edge_margin"
        android:text="@string/bs_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfSec" />

</androidx.constraintlayout.widget.ConstraintLayout>