<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentGameFragment">

    <TextView
        android:id="@+id/tvScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4 : 9" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
        app:layout_constraintEnd_toEndOf="@+id/tvScoreBoard"
        app:layout_constraintStart_toStartOf="@+id/tvScoreBoard"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreBoard"
        tools:text="00:00" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tvFinish"
        app:layout_constraintEnd_toStartOf="@+id/tvFinish"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFinish"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCancel" />

    <TextView
        android:id="@+id/tvTeamOne"
        style="@style/TeamNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer"
        tools:text="TEAMONE" />

    <TextView
        android:id="@+id/tvTeamTwo"
        style="@style/TeamNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvTeamOne"
        app:layout_constraintTop_toBottomOf="@+id/tvTeamOne"
        tools:text="TEAMTWO" />

    <TextView
        android:id="@+id/tvIncreaseTeamOne"
        style="@style/RoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/increase"
        app:layout_constraintBottom_toBottomOf="@+id/tvTeamOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTeamOne" />

    <TextView
        android:id="@+id/tvIncreaseTeamTwo"
        style="@style/RoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/increase"
        app:layout_constraintBottom_toBottomOf="@+id/tvTeamTwo"
        app:layout_constraintEnd_toEndOf="@+id/tvIncreaseTeamOne"
        app:layout_constraintTop_toTopOf="@+id/tvTeamTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>